cluster/production/graphics/draw-io/drawio-deploy/drawio-manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drawio
---
apiVersion: v1
kind: Service
metadata:
  name: drawio
  namespace: drawio
  labels:
    app: draw.io
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
  ports:
  - name: http
    port: 8080
  selector:
    app: draw.io
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drawio
  namespace: drawio
  labels:
    app: draw.io        
    app.kubernetes.io/name: draw.io
spec:
  replicas: 1
  selector:
    matchLabels:
      app: draw.io
  template:
    metadata:
      labels:
        app: draw.io        
        app.kubernetes.io/name: draw.io
    spec:
      containers:
      - image: docker.io/jgraph/drawio:23.3.6
        imagePullPolicy: IfNotPresent
        name: drawio
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-drawio-websecure
  namespace: drawio
  annotations:
    # For Homepage service discovery
    gethomepage.dev/href: "https://drawio.urbaman.cloud"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: "Draw.io"
    gethomepage.dev/group: Graphics
    gethomepage.dev/icon: draw-io.svg
    gethomepage.dev/app: draw.io # optional, may be needed if app.kubernetes.io/name != ingressRoute metadata.name
    gethomepage.dev/name: "Draw.io"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`drawio.urbaman.cloud`)
      services:
        - name: drawio
          port: 8080
          serversTransport: traefik-drawio-transport
      middlewares:
        - name: security
          namespace: traefik
  tls:
    secretName: drawio-urbaman-cloud
    options:
      name: tlsoptions
      namespace: traefik
